--- a/bastille.html
+++ b/bastille.html
@@ -32,7 +32,8 @@
                 </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo_picture">
             </div>
-            <img class="nav-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="restaurant_picture">
+            <img class="nav-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp"
+                alt="restaurant_picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
@@ -46,135 +47,141 @@
             <!-- Starters -->
             <h2>ENTREES</h2>
             <div class="line"></div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Citrus Squid Carpaccio</h3>
-                            <p>With orange zest</p>
-                        </article>
-                        <span class="dish-price">25€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Grandmoters's Vegetable Soup</h3>
-                            <p>Carrots,parsnips,Jerusalem artichoke</p>
-                        </article>
-                        <span class="dish-price">35€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+            <div class="menu-section">
+                <div class="visible-dish-wrap first">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Citrus Squid Carpaccio</h3>
+                                <p>With orange zest</p>
+                            </article>
+                            <span class="dish-price">25€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Onion Soup</h3>
-                            <p>Revisited</p>
-                        </article>
-                        <span class="dish-price">20€</span>
+                <div class="visible-dish-wrap second">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Grandmoters's Vegetable Soup</h3>
+                                <p>Carrots,parsnips,Jerusalem artichoke</p>
+                            </article>
+                            <span class="dish-price">35€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="visible-dish-wrap third">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Onion Soup</h3>
+                                <p>Revisited</p>
+                            </article>
+                            <span class="dish-price">20€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
             <div class="line"></div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Scallops</h3>
-                            <p>With mashed parsnip</p>
-                        </article>
-                        <span class="dish-price">40€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Magret de canard</h3>
-                            <p>With mashed potatoes</p>
-                        </article>
-                        <span class="dish-price">35€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+            <div class="menu-section">
+                <div class="visible-dish-wrap fourth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Scallops</h3>
+                                <p>With mashed parsnip</p>
+                            </article>
+                            <span class="dish-price">40€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Game Hen</h3>
-                            <p>With vegetable gnocchis</p>
-                        </article>
-                        <span class="dish-price">44€</span>
+                <div class="visible-dish-wrap fifth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Magret de canard</h3>
+                                <p>With mashed potatoes</p>
+                            </article>
+                            <span class="dish-price">35€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="visible-dish-wrap sixth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Game Hen</h3>
+                                <p>With vegetable gnocchis</p>
+                            </article>
+                            <span class="dish-price">44€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
             <div class="line"></div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Floral Ice Cream</h3>
-                            <p>With hazelnut butter</p>
-                        </article>
-                        <span class="dish-price">18€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Chocolate Lava Cake</h3>
-                            <p>Revisited</p>
-                        </article>
-                        <span class="dish-price">22€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+            <div class="menu-section">
+                <div class="visible-dish-wrap seventh">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Floral Ice Cream</h3>
+                                <p>With hazelnut butter</p>
+                            </article>
+                            <span class="dish-price">18€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Napolean</h3>
-                            <p>With blueberries and marzipan</p>
-                        </article>
-                        <span class="dish-price">23€</span>
+                <div class="visible-dish-wrap eighth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Chocolate Lava Cake</h3>
+                                <p>Revisited</p>
+                            </article>
+                            <span class="dish-price">22€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="visible-dish-wrap ninth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Napolean</h3>
+                                <p>With blueberries and marzipan</p>
+                            </article>
+                            <span class="dish-price">23€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
