--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -32,7 +32,8 @@
                 </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo_picture">
             </div>
-            <img class="nav-img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp" alt="restaurant_picture">
+            <img class="nav-img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
+                alt="restaurant_picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
@@ -47,135 +48,141 @@
 
             <h2>ENTREES</h2>
             <div class="line"></div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Tuna Carpaccio</h3>
-                            <p>Seasoned with yuzu</p>
-                        </article>
-                        <span class="dish-price">25€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Crunchy Lobster Croquets</h3>
-                            <p>With seasonal vegetables</p>
-                        </article>
-                        <span class="dish-price">35€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+            <div class="menu-section">
+                <div class="visible-dish-wrap first">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Tuna Carpaccio</h3>
+                                <p>Seasoned with yuzu</p>
+                            </article>
+                            <span class="dish-price">25€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Mushroom Soup</h3>
-                            <p>With truffles</p>
-                        </article>
-                        <span class="dish-price">20€</span>
+                <div class="visible-dish-wrap second">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Crunchy Lobster Croquets</h3>
+                                <p>With seasonal vegetables</p>
+                            </article>
+                            <span class="dish-price">35€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="visible-dish-wrap third">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Mushroom Soup</h3>
+                                <p>With truffles</p>
+                            </article>
+                            <span class="dish-price">20€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
             <div class="line"></div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Roast Chicken with Provincal Herbs</h3>
-                            <p>With truffle cream</p>
-                        </article>
-                        <span class="dish-price">40€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Roasted Lobster</h3>
-                            <p>With seasonel vegetables</p>
-                        </article>
-                        <span class="dish-price">35€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+            <div class="menu-section">
+                <div class="visible-dish-wrap fourth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Roast Chicken with Provincal Herbs</h3>
+                                <p>With truffle cream</p>
+                            </article>
+                            <span class="dish-price">40€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Angust Beef Ribs</h3>
-                            <p>With mashed parshnips</p>
-                        </article>
-                        <span class="dish-price">44€</span>
+                <div class="visible-dish-wrap fifth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Roasted Lobster</h3>
+                                <p>With seasonel vegetables</p>
+                            </article>
+                            <span class="dish-price">35€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="visible-dish-wrap sixth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Angust Beef Ribs</h3>
+                                <p>With mashed parshnips</p>
+                            </article>
+                            <span class="dish-price">44€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
             <div class="line"></div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Assorted Dessert P|late</h3>
-                            <p>Chef's choice</p>
-                        </article>
-                        <span class="dish-price">18€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Crème brulée</h3>
-                            <p>Revisited</p>
-                        </article>
-                        <span class="dish-price">22€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+            <div class="menu-section">
+                <div class="visible-dish-wrap seventh">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Assorted Dessert Plate</h3>
+                                <p>Chef's choice</p>
+                            </article>
+                            <span class="dish-price">18€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Tiramisu</h3>
-                            <p>With hazelnuts</p>
-                        </article>
-                        <span class="dish-price">23€</span>
+                <div class="visible-dish-wrap eighth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Crème brulée</h3>
+                                <p>Revisited</p>
+                            </article>
+                            <span class="dish-price">22€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="visible-dish-wrap ninth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Tiramisu</h3>
+                                <p>With hazelnuts</p>
+                            </article>
+                            <span class="dish-price">23€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
