--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -47,149 +47,155 @@
             <!-- Starters -->
             <h2>ENTREES</h2>
             <div class="line"></div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Foie Gras Ravioli</h3>
-                            <p>With truffle cream</p>
-                        </article>
-                        <span class="dish-price">25€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Oscietra Caviar</h3>
-                            <p>With buckwheat blinis</p>
-                        </article>
-                        <span class="dish-price">35€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+            <div class="menu-section">
+                <div class="visible-dish-wrap first">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Foie Gras Ravioli</h3>
+                                <p>With truffle cream</p>
+                            </article>
+                            <span class="dish-price">25€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Lobster and Leek Foam</h3>
-                            <p>Marinated with orange zest</p>
-                        </article>
-                        <span class="dish-price">20€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                <div class="visible-dish-wrap second">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Oscietra Caviar</h3>
+                                <p>With buckwheat blinis</p>
+                            </article>
+                            <span class="dish-price">35€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Duck Foie Gras</h3>
-                            <p>With fig jam and grilled baguette</p>
-                        </article>
-                        <span class="dish-price">35€</span>
+                <div class="visible-dish-wrap third">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Lobster and Leek Foam</h3>
+                                <p>Marinated with orange zest</p>
+                            </article>
+                            <span class="dish-price">20€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="visible-dish-wrap fourth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Duck Foie Gras</h3>
+                                <p>With fig jam and grilled baguette</p>
+                            </article>
+                            <span class="dish-price">35€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
             <div class="line"></div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Fresh Buttered Scallops</h3>
-                            <p>With white celery puree</p>
-                        </article>
-                        <span class="dish-price">40€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Pan-Fried Lobster</h3>
-                            <p>With mashed sweet potatoes</p>
-                        </article>
-                        <span class="dish-price">35€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+            <div class="menu-section">
+                <div class="visible-dish-wrap fifth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Fresh Buttered Scallops</h3>
+                                <p>With white celery puree</p>
+                            </article>
+                            <span class="dish-price">40€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Braised Ox Tail</h3>
-                            <p>With wild rice and lemon zest</p>
-                        </article>
-                        <span class="dish-price">44€</span>
+                <div class="visible-dish-wrap sixth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Pan-Fried Lobster</h3>
+                                <p>With mashed sweet potatoes</p>
+                            </article>
+                            <span class="dish-price">35€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="visible-dish-wrap seventh">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Braised Ox Tail</h3>
+                                <p>With wild rice and lemon zest</p>
+                            </article>
+                            <span class="dish-price">44€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
             <div class="line"></div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Chocolate and Hazelnut Macaron</h3>
-                            <p>With caramel butter ice cream</p>
-                        </article>
-                        <span class="dish-price">18€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Baba au rhum</h3>
-                            <p>With lemon drizzle</p>
-                        </article>
-                        <span class="dish-price">22€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+            <div class="menu-section">
+                <div class="visible-dish-wrap eighth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Chocolate and Hazelnut Macaron</h3>
+                                <p>With caramel butter ice cream</p>
+                            </article>
+                            <span class="dish-price">18€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap">
-                    <div class="dish">
-                        <article class="dish-info">
-                            <h3>Lemon Meringue Pie</h3>
-                            <p>Destructured</p>
-                        </article>
-                        <span class="dish-price">23€</span>
+                <div class="visible-dish-wrap ninth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Baba au rhum</h3>
+                                <p>With lemon drizzle</p>
+                            </article>
+                            <span class="dish-price">22€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                </div>
+                <div class="visible-dish-wrap tenth">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Lemon Meringue Pie</h3>
+                                <p>Destructured</p>
+                            </article>
+                            <span class="dish-price">23€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
             </div>
