--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Full</title>
+    <title>The Full Palette</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <!-- <link rel="stylesheet" href="css/smart-phone.css" type="text/css"> -->
 
     <!-- Libs -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +31,8 @@
                 </a>
                 <img src="/images/logo/ohmyfood@2x.svg" alt="logo picture">
             </div>
-            <img class="nav-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="restaurant picture">
+            <img class="nav-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp"
+                alt="restaurant picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
@@ -44,10 +44,12 @@
                 <i class="far heart fa-heart "></i>
             </article>
             <!-- Starters -->
+
             <h2>ENTREES</h2>
             <div class="line"></div>
             <div class="menu-section">
-                <div class="visible-dish-wrap">
+
+                <div class="visible-dish-wrap first">
                     <div class="dish-wrap">
                         <div class="dish">
                             <article class="dish-info">
@@ -63,7 +65,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="visible-dish-wrap">
+                <div class="visible-dish-wrap second">
                     <div class="dish-wrap">
                         <div class="dish">
                             <article class="dish-info">
@@ -77,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="visible-dish-wrap">
+                <div class="visible-dish-wrap third">
                     <div class="dish-wrap">
                         <div class="dish">
                             <article class="dish-info">
@@ -93,10 +95,12 @@
                 </div>
             </div>
             <!-- Main dish -->
+
+            <!-- <div class="menu-section"> -->
             <h2>MAIN DISH</h2>
             <div class="line"></div>
             <div class="menu-section">
-                <div class="visible-dish-wrap">
+                <div class="visible-dish-wrap fourth">
                     <div class="dish-wrap">
                         <div class="dish">
                             <article class="dish-info">
@@ -110,7 +114,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="visible-dish-wrap">
+                <div class="visible-dish-wrap fifth">
                     <div class="dish-wrap">
                         <div class="dish">
                             <article class="dish-info">
@@ -124,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="visible-dish-wrap">
+                <div class="visible-dish-wrap sixth">
                     <div class="dish-wrap">
                         <div class="dish">
                             <article class="dish-info">
@@ -140,10 +144,12 @@
                 </div>
             </div>
             <!-- Desserts -->
+
+            <!-- <div class="menu-section"> -->
             <h2>DESSERTS</h2>
             <div class="line"></div>
             <div class="menu-section">
-                <div class="visible-dish-wrap">
+                <div class="visible-dish-wrap seventh">
                     <div class="dish-wrap">
                         <div class="dish">
                             <article class="dish-info">
@@ -157,7 +163,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="visible-dish-wrap">
+                <div class="visible-dish-wrap eighth">
                     <div class="dish-wrap">
                         <div class="dish">
                             <article class="dish-info">
@@ -171,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="visible-dish-wrap">
+                <div class="visible-dish-wrap ninth">
                     <div class="dish-wrap">
                         <div class="dish">
                             <article class="dish-info">
